Improve server config sanitize tasks